-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8.0
-
None
-
423496dcf (dev), eb1402fe1 (6.8)
QCheckBox Class documentation mentions methods that do not exist anymore:
- pixmap()
- setPixmap()
- accel()
- setAccel()
- isToggleButton()
- isExclusiveToggle()
- resulted in
-
QTBUG-131092 Investigate auto-linking
-
- Reported
-
For Gerrit Dashboard: QTBUG-130916 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
603196,3 | Doc/QCheckBox: remove outdated paragraph | dev | qt/qtbase | Status: MERGED | +2 | 0 |
603222,2 | Doc/QCheckBox: remove outdated paragraph | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |